@@ -1,9 +1,9 @@
-package Exercise3;
-
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -17,20 +17,20 @@ public class Downloader {
 
 
     public Downloader(URL url, String outputFilename) throws IOException {
-    in = url.openConnection().getInputStream();
-    out = new FileOutputStream(outputFilename);
-    listeners = new ArrayList<>();
+        in = url.openConnection().getInputStream();
+        out = new FileOutputStream(outputFilename);
+        listeners = new ArrayList<>();
     }
 
 
     public synchronized void addListener(ProgressListener listener) {
-    listeners.add(listener);
+        listeners.add(listener);
     }
 
 
     private synchronized void updateProgress(int total) {
-    for (ProgressListener listener : listeners)
-    listener.onProgress(total);
+        for (ProgressListener listener : listeners)
+        listener.onProgress(total);
     }
 
     public void run() throws IOException {
@@ -45,39 +45,32 @@ public class Downloader {
         out.flush();
     }
 
-    public static void main(String[] args) {
-
-        URL url = new URL("https://example.com");
-        Downloader downloader = new Downloader(url, "testOutput.txt")
-
+    public static void main(String[] args) throws IOException, URISyntaxException {
+        URL url = new URI("http://example.com").toURL();
+        Downloader downloader = new Downloader(url, "output.txt");
+        ProgressListener listener = new ProgressListener();
+        downloader.addListener(listener);
+    
         Thread thread1 = new Thread(() -> {
-                try {
-                    downloader.run();
-                } catch (IOException e) {
-                    System.err.println("Error in thread 2: " + e.getMessage());
-                }
-            });
-
-        Thread thread2 = new Thread(() -> {
             try {
                 downloader.run();
             } catch (IOException e) {
-                System.err.println("Error in thread 2: " + e.getMessage());
+                e.printStackTrace();
             }
         });
-
+    
+        Thread thread2 = new Thread(() -> {
+            synchronized (listener.lock) {
+                    try {
+                        Thread.sleep(1000);
+                        downloader.run();
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
+                }
+        });
+    
         thread1.start();
         thread2.start();
-
-
-        thread1.join();
-        thread2.join();
-
-
-
-
-
-        }
-
-        
+    }       
 }
